--- a/public/assets/sass/frontend/modules/_tags.sass
+++ b/public/assets/sass/frontend/modules/_tags.sass
@@ -32,5 +32,9 @@ ul.tags
         letter-spacing: 0.4px
 
 .entry-info .tags
-    padding-top: 1rem
-    padding-bottom: 1.25rem
+    padding-top: 0.5rem
+    padding-bottom: 0.75rem
+
+    @include media-breakpoint-up(sm)
+        padding-top: 1rem
+        padding-bottom: 1.25rem
